@@ -1,3 +1,9 @@
+2015-12-29  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
+
+	* dvipdfmx.c, dvi.c: Allow empty password in pdf:encrypt special.
+	* dvipdfmx.c, pdfdoc.[ch], pdfobj.[ch]: Add option to disable Xref
+	stream and object stream.
+
 2015-12-28  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
 
 	* bmpimage.c, dvipdfmx.c, pdfobj.[ch], pngimage.c: Support for predictor
